<resources>
    <string name="app_name">Synertone</string>
    <string name="start">Please Select A Camera</string>
    <string name="ip">Device IP:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="status">Status:</string>
    <string name="remember">Remember Me</string>
    <string name="autolog">Auto Log</string>
    <string name="cancel">Cancel AutoLog</string>
    <string name="nonetwork">sorry,there isn\'t network</string>
    <string name="device">Device</string>
    <string name="yuntai">Holder</string>
    <string name="paizhao">Photo</string>
    <string name="luxiang">Video</string>
    <string name="setting">Settings</string>
    <string name="set">Settings\tList</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="channel">Selector Channel</string>
    <string name="sure">Message</string>
    <string name="yes">OK</string>
    <string name="back">Back</string>
    <string name="Cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="close">Exit</string>
    <string name="ch01"> Channel One</string>
    <string name="ch02"> Channel Two</string>
    <string name="ch03"> Channel Three</string>
    <string name="ch04"> Channel Four</string>
    <string name="offline">This device is offline, please try again later!</string>
    <string name="deivceOffline">The device is Offline, back to previous page</string>
    <string name="nodevice">No Device Online</string>
    <string name="onuserSingle">Device Online</string>
    <string name="onuser">Devices Online</string>
    <string name="nouser">Havn\'t device online</string>
    <string name="fail">Connect to server failure, please login again!</string>
    <string name="loginFail">Wrong user name or password. Back and try again?</string>
    <string name="quit">Are you sure that you want to exit?</string>
    <string name="readme">Welcome to use 51See!\n\n\t
		See51 is a smart phone video monitoring of the client software.
		It used multithreading to decoding,
		To ensure the speed and effectiveness of play.\n\t
		After successful login to the main interface,
		Click the screen below the menu bar of the device will show all the equipment online,
		Click Device and then select the device channel to begin watching.\n\t
		Images with the mobile phone screen anyway to switch auto-sensing,
		Enjoy See51 you perfect play experience brought.\n\n
		Shortcut techniques:\n\n
		help：\t click ?\n
		Full screen：\tSingle-click the screen\n
		Hide menu：\tClick the screen for a long time\n
		Program exit：\tSingle-click the X\n\n
		\t
		\tThank you for your use!\n\n</string>
    <string name="tip">Sorry! Without realizing function</string>
    <string name="cameraOne">Camera One</string>
    <string name="cameraTwo">Camera Two</string>
    <string name="cameraThree">Camera Three</string>
    <string name="cameraFour">Camera Four</string>
    <string name="viewTitle">Video Playing</string>
    <string name="errorMessage">Before Click on the OK Button, Please Select A Camera</string>
    <string name="wrongResolution">Sorry! Only 320x240 resolution is supported currently</string>
    <string name="wrongResolutionTip">The Resolution is not Supported</string>
    <string name="lostConnectionTitle">Lost connection</string>
    <string name="lostConnectionMessage">Reconnect or exist?</string>
    <string name="reconnect">Reconnect</string>
    <string name="loading">Loading…</string>
    <string name="strInputAccHint">Enter User Name</string>
    <string name="pubdev">Public</string>
    <string name="landev">Local device</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname:</string>
    <string name="passwordagain">Confirm Password:</string>
    <string name="passwordinmatch">The 2 passwords do not match!Please enter again…</string>
    <string name="passwordmatch">The new password and old one  are the same!</string>
    <string name="inputIncomplete">All the input items can not be null!</string>
    <string name="registerresult">Register Result</string>
    <string name="registersuccess">Register Success!</string>
    <string name="registerfailed">Register Failed!</string>
    <string name="username_has_beenused">User name has been used！</string>
    <string name="userdevice">Remote device</string>
    <string name="changepassword">Change password</string>
    <string name="changingpassword">Changing Password, Please Wait…</string>
    <string name="changenickname">Change Nickname</string>
    <string name="changingnickname">Changing Nickname, Please Wait…</string>
    <string name="newnickname">New Nickname:</string>
    <string name="newnicknameincomplete">The New Nickname and Password Cannot be Null!</string>
    <string name="changenicknameret">Change Nickname Result</string>
    <string name="changenicknamesuccess">Change Nickname Success!</string>
    <string name="changenicknamefailed">Change Nickname Failed!</string>
    <string name="changefailedtip">Back to the previous page!</string>
    <string name="changesuccesstip">Please re-login!</string>
    <string name="newpassword">New Password:</string>
    <string name="newpasswordagain">New Password Again:</string>
    <string name="changepasswordret">Change Password Result</string>
    <string name="changepasswordsuccess">Change Password Success!</string>
    <string name="changepasswordfailed">Change Password Failed!</string>
    <string name="forgetme">Forget me</string>
    <string name="otherloginlocation">Other Login Location. Don\'t realize</string>
    <string name="open">Open</string>
    <string name="changedevicename">Change Device Name</string>
    <string name="changingdeicename">Changing Device Name, Please Wait…</string>
    <string name="deviceinfo">Device Info</string>
    <string name="newdevicename">New Device Name:</string>
    <string name="newdevicenameincomplete">New Device Name Cannot be Null!</string>
    <string name="changedevnameret">Change Device Name Result</string>
    <string name="changedevnamesuccess">Change Device Name Success!</string>
    <string name="changedevnamefailed">Change Device Name Failed!</string>
    <string name="deviceinfomation">Device Infomation</string>
    <string name="logout">Logout</string>
    <string name="logoutlocation">Logout Login Location: </string>
    <string name="logoutret">Logout Result</string>
    <string name="logoutsuccess">Logout This Login location Success!</string>
    <string name="logoutfailed">Logout This Login location Failed!</string>
    <string name="newdevnameincomplete">The New Device Name Cannot be Null!</string>
    <string name="devicename">Device name: </string>
    <string name="hardwareId">Hardware ID: </string>
    <string name="softwareversion">Software Version :</string>
    <string name="hardwareversion">Hardware Version :</string>
    <string name="backLogin">Login failed, go to Login page </string>
    <string name="userlogin">User Login </string>
    <string name="userlogining">Try to login, please wait… </string>
    <string name="userOnline">Online</string>
    <string name="timeout">Connect to server timeout!</string>
    <string name="getPubList">Get Public Devices list </string>
    <string name="gettingPubList">Try to get public devices, please wait… </string>
    <string name="getListTimeout">Get device list timeout! </string>
    <string name="wait">Wait</string>
    <string name="registerUser">User Register</string>
    <string name="registerring">Try to register, please wait…</string>
    <string name="nicknameLenRequire">Sorry, the length of nickname should between 6 and 40!</string>
    <string name="userNameLenRequire">Sorry, the length of user name should between 3 and 20!</string>
    <string name="userNameCharRequire">Sorry, only capital letters(A\–Z), letters(a\–z), numbers (0\-9), underline(_) or email format!</string>
    <string name="passwordLenRequire">Sorry, the length of password should between 6 and 20!</string>
    <string name="passwordCharRequire">Sorry, Chinese characters are not allowed for password!</string>
    <string name="devNameLenRequire">Sorry, the length of device name should between 1 and 40!</string>
    <string name="wrongDataServer">Sorry, the the data server does not support currently, back to previous page</string>
    <string name="readDataTimeout">Read data timeout, back or exit?</string>
    <string name="myLanDevice">My LAN Devices</string>
    <string name="lanDeviceSearchRet">Search Results</string>
    <string name="searchLanDevice">Search</string>
    <string name="searching">Searching, please wait…</string>
    <string name="addDevice">Add Devices, Please Enter Password of this Device</string>
    <string name="addDeviceSuccessfully">Add Devices Successfully</string>
    <string name="alreadyAdded">The device has already been added!</string>
    <string name="deleteMessage">Are you sure that you want to delete it?</string>
    <string name="add">Add</string>
    <string name="strInputDevIdHint">Can be null</string>
    <string name="inputIncompleteAddDev">Except Hardware Id, all the other input items can not be null!</string>
    <string name="deleteLanDev">Delete this device</string>
    <string name="alreadyDelete">This device has already been deleted!</string>
    <string name="deleteSuccessfully">This device has been deleted successfully!</string>
    <string name="enterPassword">Please Enter Password!</string>
    <string name="directConnect">Direct</string>
    <string name="hideOfflines">Hide Offlines</string>
    <string name="localList">Local Device List</string>
    <string name="wiredNetworkParameters">Wired Network Parameters</string>
    <string name="wirelessNetworkParameters">Wireless Network Parameters</string>
    <string name="videoAudioParameters">Video and Audio</string>
    <string name="net3gParameters">3G/4G Parameters</string>
    <string name="bind">Bind</string>
    <string name="binding">Binding, please wait…</string>
    <string name="bindSuccess">Bind the device successfully!</string>
    <string name="bindFailedError">Bind the device failed due to </string>
    <string name="bindFailed">Bind the device failed!</string>
    <string name="unbind">Unbind</string>
    <string name="unbinding">Unbinding, please wait…</string>
    <string name="unbindSuccess">Unbind the device successfully!</string>
    <string name="unbindFailedError">Unbind the device failed due to </string>
    <string name="unbindFailed">Unbind the device failed!</string>
    <string name="settingDevPara">Parameter Setting</string>
    <string name="MacAddress">Mac Address</string>
    <string name="bindingUserName">Binding User Name</string>
    <string name="deviceName">Device Name :</string>
    <string name="devicePasswrod">Device Password</string>
    <string name="audio">Audio</string>
    <string name="alarm">Alarm</string>
    <string name="retry">Retry</string>
    <string name="plSelect">Please select</string>
    <string name="next">Next</string>
    <string name="guideSmartConnection">Add by Smart Connection</string>
    <string name="reticleInternet">Connect to the network through a network cable</string>
    <string name="notice3GLink">Connect to the network using a 3G/4G card</string>
    <string name="wifiInternet">Connect to the network by wifi</string>
    <string name="btnfourviews">Muti Views</string>
    <string name="rotation">Flip</string>
    <string name="mirror">Mirror</string>
    <string name="Definition">Quality</string>
    <string name="Speech">Speech</string>
    <string name="Send_Sonic">Send Sonic</string>
    <string name="send_sonic_complete">Send complete\n imaging hair out waiting for receiving tones</string>
    <string name="no_sound">If you do not hear the prompt\nplease send sound waves again</string>
</resources>