<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout3GSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qianhui"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/plSelect"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/btn3gReticleLink"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shap"
        android:text="@string/reticleInternet" />
	
    <Button
        android:id="@+id/btnWifiLink"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button_shap"
        android:text="@string/wifiInternet" />
    
    <Button
        android:id="@+id/btn3GLink"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button_shap"
        android:text="@string/notice3GLink" />

</LinearLayout>