<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
	    <EditText
	        android:id="@+id/edit_username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/username"
	        android:textColor="@color/device_info_btn_text" />
	
	    <EditText
	        android:id="@+id/edit_nickname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/nickname"
	        android:textColor="@color/device_info_btn_text" />

	    <EditText 
	        android:id="@+id/edit_password"  
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:hint="@string/password"
	        android:textColor="@color/device_info_btn_text"
	        android:inputType="textPassword"   
	     	/>    

	    <EditText 
	        android:id="@+id/edit_passwordagain"  
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	       	android:hint="@string/passwordagain"
	       	android:textColor="@color/device_info_btn_text"
	        android:inputType="textPassword"     
	     	/><!--

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/register_ok"
	            android:layout_width="120dip"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:text="@string/register" />

	        <Button
	            android:id="@+id/register_cancel"
	            android:layout_width="120dip"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentTop="true"
	            android:text="@string/back" />

	    </RelativeLayout>
	    
--></LinearLayout>