<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:layout_marginTop="10dp"
    android:alpha="0.9"
    android:background="@drawable/shap_dialog">
    
    <ImageView 
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/erro_img"/>
    <TextView 
        android:id="@+id/erroTx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/qianhei"
        android:textSize="15sp"
        android:text="@string/loginFail"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <Button 
        android:id="@+id/erro_reTry"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginRight="25dp"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:background="@drawable/button_shap"/>
        <Button 
        android:id="@+id/erro_cancel"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:text="@string/Cancel"
        android:textColor="@color/white"
        android:background="@drawable/button_shap"/>
    </LinearLayout>
    

</LinearLayout>
